added static files and a stylesheet to test if it is working

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
 		p#footer a {color:#999;}
 		.quiet {color:#999;}
 	</style>
+	
+	<link rel="stylesheet" href="{{ STATIC_URL }}css/mysite.css" type="text/css" media="screen" title="default" charset="utf-8" />
+	<link rel="Shortcut Icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
 
 </head>
 <body>
