--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 		<!-- {# 		<p><strong>Django Version:</strong> {{ django_version }}<br /> #} -->
 		<!-- {# 			{% now "jS F Y H:i" %}</p> #} -->
 		<p id="footer">
-			This is <a href="http://hypertexthero.com">Simon Griffee</a> experimenting with Django.
+			This is has been <a href="http://hypertexthero.com" title="Hypertexthero.com">Simon Griffee</a>, experimenting with Django.
 		</p>
 	{% endblock %}
 </body>
