updated base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,8 @@
 	{% endblock %}
 	
 	{% block footer %}
-		<!-- {# 		<p><strong>Django Version:</strong> {{ django_version }}<br /> #} -->
-		<!-- {# 			{% now "jS F Y H:i" %}</p> #} -->
+		{# 		<p><strong>Django Version:</strong> {{ django_version }}<br /> #} -->
+		{# 			{% now "jS F Y H:i" %}</p> #}
 		<p id="footer">
 			This has been <a href="http://hypertexthero.com" title="Hypertexthero.com">Simon Griffee</a>, experimenting with Django.
 		</p>
