refactored css and added curent time

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,10 +35,9 @@
 	{% endblock %}
 	
 	{% block footer %}
-		{# 		<p><strong>Django Version:</strong> {{ django_version }}<br /> #} -->
-		{# 			{% now "jS F Y H:i" %}</p> #}
 		<p id="footer">
-			This has been <a href="http://hypertexthero.com" title="Hypertexthero.com">Simon Griffee</a>, experimenting with Django.
+			This has been <a href="http://hypertexthero.com" title="Hypertexthero.com">Simon Griffee</a>, experimenting with Django.<br />
+			It is currently {% now "H:i T" %} on the {% now "jS" %} of {% now "F Y" %}.
 		</p>
 	{% endblock %}
 </body>
