refactored settings. created static and apps folders.

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,8 @@
 		.quiet {color:#999;}
 	</style>
 	
-	<link rel="stylesheet" href="{{ MEDIA_URL }}css/mysite.css" type="text/css" media="screen" title="default" charset="utf-8" />
-	<link rel="Shortcut Icon" href="{{ MEDIA_URL }}favicon.ico" type="image/x-icon" />
+	<link rel="stylesheet" href="{{ STATIC_URL }}css/mysite.css" type="text/css" media="screen" title="default" charset="utf-8" />
+	<link rel="Shortcut Icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
 
 </head>
 <body>
