--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 
 {% block headtitle %}
-{{ flatpage.title }} -
+    {{ flatpage.title }} -
 {% endblock %}
 
-{% block breadcrumbs %} / {{ flatpage.title }}{% endblock %}
+{% block breadcrumbs %} 
+    / {{ flatpage.title }}
+{% endblock %}
 
 {% block content %}
-<h1>{{ flatpage.title }}</h1>	
-{{ flatpage.content }}
+    <h1>{{ flatpage.title }}</h1>	
+    <!-- http://programanddesign.com/uncategorized/django-flatpages-markdown-and-syntax-highlighting/ -->
+    {% load markup %}
+    {{ flatpage.content|markdown:"safe,codehilite" }}
 {% endblock %}
